# django-auth-manager

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
django_auth_manager/: constants.py
django_auth_manager/management/commands/: fetch_groups.py  fetch_users.py
