[tool.poetry]
name = "django-auth-manager"
version = "0.1.0"
description = "Django extension for managing users and groups"
authors = ["Nadzeya Hutsko <nadzya.info@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8-ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
